# MATX

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  Cargo.toml  INSTALL  Makefile.am  README.md  configure.ac
.cargo/: config.offline
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-test.yml
.tx/: config
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  matx-cli.bash-completion  matx-qt.pro  matx-tx.bash-completion  valgrind.supp
contrib/debian/: README.md  changelog  control  matx-qt.desktop  matx-qt.install  matx-qt.lintian-overrides  matx-qt.manpages  matx-qt.protocol  rules  watch
contrib/devtools/: README.md  copyright_header.py  gen-manpages.sh  test_deterministic_coverage.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  org.matx.matxd.plist
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/qos/: README.md
contrib/rpm/: matx.fc  matx.if  matx.spec  matx.te
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py
contrib/spendfrom/: README.md  spendfrom.py
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/gitian-building/: gitian-setup-fedora.md  gitian-setup-mac.md  gitian-setup-ubuntu.md  gitian-setup-windows.md
doc/man/: Makefile.am  matx-cli.1  matx-qt.1  matx-tx.1
doc/release-notes/: draft-release-notes-6.0.0.md  release-notes-2.1.5.md  release-notes-2.2.1.md  release-notes-2.3.0.md  release-notes-2.3.1.md  (+25 more)
params/: install-params.sh  sapling-output.params
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  (+121 more)
src/qt/: CMakeLists.txt  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  matx.cpp  matx.qrc  matx_locale.qrc  matxstrings.cpp  networkstyle.cpp  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  peertablemodel.cpp  (+21 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  intro.ui  openuridialog.ui  rpcconsole.ui
src/qt/locale/: matx_bn.ts  matx_de.ts  matx_en.ts  matx_es.ts  matx_es_ES.ts  matx_fa.ts  matx_fr_FR.ts  matx_hr_HR.ts  matx_it.ts  matx_ko_KR.ts  matx_nl.ts  matx_pl.ts  matx_ru.ts  matx_sv.ts  matx_tr.ts  matx_zh_CN.ts  matx_zh_TW.ts
src/qt/matx/: addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  governancemodel.cpp  governancemodel.h  governancewidget.cpp  governancewidget.h  guitransactionsutils.cpp  (+69 more)
src/qt/matx/forms/: addresseswidget.ui  coldstakingwidget.ui  createproposaldialog.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendmultirow.ui  topbar.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/matx/res/css/: style_dark.css  style_light.css
src/qt/matx/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/matx/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/res/: matx-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
(+464 files in other folders)
